--- a/examples/testing.html
+++ b/examples/testing.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="../../jquery.codemovie.css" type="text/css"/>
 </head>
 <body>
-<div id="codeMovieContainer">
+<div id="codeMovieContainer" style="border: 1px solid #e4e4e4">
 	<pre id="codeMovieContent"></pre>
 </div>
-<script type="text/javascript" src="../scripts/jquery.edge.js"></script>
+<script type="text/javascript" src="scripts/jquery.edge.js"></script>
 <script type="text/javascript" src="../../jquery.codemovie.js"></script>
 <script type="text/javascript">
 	var sampleText1 = `static char FindMostFrequentVowel(String str)
