--- a/examples/testing.html
+++ b/examples/testing.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="codeMovieContainer" style="border: 1px solid #e4e4e4">
-	<pre id="codeMovieContent"></pre>
+	<pre class="codeMovieContent"></pre>
 </div>
 <script type="text/javascript" src="scripts/jquery.edge.js"></script>
 <script type="text/javascript" src="../jquery.codemovie.js"></script>
