Used jquery from cdn url

--- a/examples/testing.html
+++ b/examples/testing.html
@@ -9,7 +9,7 @@
 <div id="codeMovieContainer" style="border: 1px solid #e4e4e4">
 	<pre class="codeMovieContent"></pre>
 </div>
-<script type="text/javascript" src="scripts/jquery.edge.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="../jquery.codemovie.js"></script>
 <script type="text/javascript">
 	var sampleText1 = `static char FindMostFrequentVowel(String str)
